--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,8 +2,13 @@
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
-// Variables
-@import "variables";
+// Base
+@import "./base/base";
+// Components
+// Debug
+// Helpers
+@import "./helpers/variables";
 
-// Bootstrap
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+// Layouts
+// Pages
+// Themes
