update front-end side

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,10 +6,13 @@
 @import "./base/colors";
 @import "./base/prefix";
 // Components
+@import "./components/_button.scss";
+@import "./components/_input.scss";
 // Debug
 // Helpers
 @import "./helpers/variables";
 
 // Layouts
+@import "./layouts/login--students.scss";
 // Pages
 // Themes
