--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,7 @@
 @import "./base/base";
 @import "./base/colors";
 @import "./base/prefix";
+@import "./base/animations";
 // Components
 @import "./components/_button.scss";
 @import "./components/_input.scss";
