--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -1,9 +1,16 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: -apple-system,BlinkMacSystemFont,Roboto,Helvetica,Arial,sans-serif;
     box-sizing: border-box;
   }
   
+  label {
+    color: #434445; // unstable
+    padding-bottom: 7px;
+    font-size: 14px;
+  }
+
   html {
     -webkit-text-size-adjust: 100%;
     text-rendering: optimizeLegibility !important;
@@ -12,6 +19,10 @@
   }
   
   a {
-    text-decoration: none;
+    text-decoration: underline;
+    color: #999;
     cursor: pointer;
+    font-size: 14px;
   }
+
+  @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
