--- a/resources/assets/sass/base/_colors.scss
+++ b/resources/assets/sass/base/_colors.scss
@@ -1,8 +1,9 @@
 $blue: #5D91FF;
+$blue-darken: #1c75c5;
 $red: #FB5C5E;
 $grey: #999;
 $grey-young: #F0F0F0;
-$black: #434445;
+$black: #2e2f30;
 $yellow: #FAC02E;
 $yellow-darken: #FD8A3E;
 $green: #00D19A;
@@ -10,3 +11,7 @@ $green-young: #25E788;
 $purple: #CE4CC9;
 $purple-young: #FD53BF;
 $whiteblue: #F7F9FA;
+
+.textBlack {
+    color: $black;
+}
