--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: -apple-system,BlinkMacSystemFont,Roboto,Helvetica,Arial,sans-serif;
     box-sizing: border-box;
+    letter-spacing: -.15px;
   }
   
   label {
@@ -18,11 +19,13 @@
     text-shadow: rgba(0,0,0,.01) 0 0 1px;
   }
   
+  p , a {font-size: 14px;}
   a {
     text-decoration: underline;
     color: #999;
     cursor: pointer;
-    font-size: 14px;
+
   }
+
 
   @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
