--- a/resources/assets/sass/base/_colors.scss
+++ b/resources/assets/sass/base/_colors.scss
@@ -3,7 +3,8 @@ $blue-darken: #1c75c5;
 $red: #FB5C5E;
 $grey: #999;
 $grey-young: #F0F0F0;
-$black: #2e2f30;
+// $black: #2e2f30;
+$black: #434445;
 $yellow: #FAC02E;
 $yellow-darken: #FD8A3E;
 $green: #00D19A;
