--- a/resources/assets/sass/base/_prefix.scss
+++ b/resources/assets/sass/base/_prefix.scss
@@ -1,3 +1,13 @@
+// instant prefix //
+.paddingAppear-n {
+    padding: 10px 15px;
+}
+.flexCenter {
+    display: flex;
+    justify-content: center;
+}
+// end of instant prefix //
+
 //border-radius Scheme //
 .borderRadius-s { border-radius: 3px!important; }
 .borderRadius-m { border-radius: 4px!important; }
