--- a/resources/assets/sass/components/_button.scss
+++ b/resources/assets/sass/components/_button.scss
@@ -21,3 +21,9 @@
         opacity: 0.7; 
     }
 }
+
+.btn-disabled {
+    @extend .btn--primary;
+    cursor: not-allowed!important;
+    background: $grey!important;
+}
