--- a/resources/assets/sass/layouts/_login--students.scss
+++ b/resources/assets/sass/layouts/_login--students.scss
@@ -62,11 +62,75 @@
 
 .coverContent {
     @extend .formContent;
+    position: relative;
     .coverContent__inner {
         @extend .formContent__inner;
+        position: relative;
+        z-index: 2;
         .coverContent__inner_core {
             display: flex;
             justify-content: center;
+            span {
+                text-align: center;
+                max-width: 500px;
+                p {
+                    @extend .paddingTop-s;
+                    color: $grey;
+                }
+                h1 {
+                    display: inline;
+                    font-size: 40px;
+                    &:hover {
+                        cursor: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/happy.png"), auto;
+                    } 
+            }} 
         }
     }
 }
+
+.coverContent__navbar {
+    @extend .flexCenter;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    @extend .paddingTop-s;
+    @extend .paddingBottom-s;
+    ul {
+        list-style-type: none;
+        li a {
+            @extend .marginLeft-s;
+            text-decoration: none;
+            color: $grey;
+            @extend .easeinouttext;
+            &:hover {
+                @extend .easeinouttext;
+                color: $grey-young;
+            }
+        }
+    }
+}
+
+.coverContent__icon {
+    width: 100%;
+    height: 70vh;
+    @extend .paddingAppear-n;
+    position: absolute;
+    .triangle1, .triangle2, .triangle3, .circle1, .circle2{
+        position: absolute;
+    }
+    .triangle1 {
+        left: 20%;
+        top: 20%;
+    }.triangle2 {
+        right: 20%;
+        bottom: 10%;
+    }.triangle3 {
+        left: 40%;
+        top: 40%;
+    }.circle1 {
+        right: 30%;
+        top: 30%;
+    }.circle2 {
+        left: 25%;
+        bottom: 20%;
+    }}
