Add & update : 404 , loading & login page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,5 +15,7 @@
 
 // Layouts
 @import "./layouts/login--students.scss";
+@import "./layouts/loading.scss";
+@import "./layouts/404.scss";
 // Pages
 // Themes
