--- a/resources/assets/sass/base/_colors.scss
+++ b/resources/assets/sass/base/_colors.scss
@@ -4,6 +4,7 @@ $red: #FB5C5E;
 $grey: #999;
 $grey-young: #F0F0F0;
 $black: #2e2f30;
+$black-darken: #000202;
 $black-young: #434445;
 $yellow: #FAC02E;
 $yellow-darken: #FD8A3E;
