--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -27,8 +27,7 @@
     text-decoration: underline;
     color: #999;
     cursor: pointer;
-
   }
-
+  ul {list-style: none;}
 
   @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
