--- a/resources/assets/sass/components/_button.scss
+++ b/resources/assets/sass/components/_button.scss
@@ -22,6 +22,22 @@
     }
 }
 
+.btn--big {
+    @extend .paddingAppear-n;
+    width: 100%;
+    @extend .borderRadius-s;
+    color: white;
+    font-size: 14px;
+    font-weight: lighter;
+    &:hover {
+        background-color: $blue-darken;
+        @extend .easeinoutbtn;
+    }
+    &:active {
+        opacity: 0.7; 
+    }
+}
+
 .btn-disabled {
     @extend .btn--primary;
     cursor: not-allowed!important;
