update : dashboard student # 1

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -21,5 +21,6 @@
 @import "./layouts/loading.scss";
 @import "./layouts/404.scss";
 @import "./layouts/dashboard-students.scss";
+@import "./layouts/_getstart.scss";
 // Pages
 // Themes
