--- a/resources/assets/sass/base/_colors.scss
+++ b/resources/assets/sass/base/_colors.scss
@@ -1,6 +1,7 @@
 $blue: #5D91FF;
 $blue-darken: #1c75c5;
 $red: #FB5C5E;
+$red-darken: rgb(247, 66, 69);
 $grey: #999;
 $grey-young: #F0F0F0;
 $black: #2e2f30;
