--- a/resources/assets/sass/base/_prefix.scss
+++ b/resources/assets/sass/base/_prefix.scss
@@ -18,7 +18,7 @@
 // prefix layouting //
 .overflow-disable { overflow: hidden; }
 .clearfix {clear:both;}
-.universe { left: 0;position: absolute;right: 0;top: 0;}
+.universe { left: 0;position: absolute;right: 0;top: 0; bottom: 0;}
 .marginMagic { margin: 0 auto; }
 .margin-xxs { margin: 5px; }
 .margin-xs { margin: 10px; }
