--- a/resources/assets/sass/components/_navigations.scss
+++ b/resources/assets/sass/components/_navigations.scss
@@ -6,6 +6,7 @@
     backface-visibility: hidden;
 }.navbar--primary {
     border-bottom: 1px solid rgba(0,0,0,0.08);
+    background-color: white;
 }
 
 .nav-active{
