--- a/resources/assets/sass/components/_extras.scss
+++ b/resources/assets/sass/components/_extras.scss
@@ -63,9 +63,14 @@
 // avatar
 .img-default { width: 100%; height: auto;}
 .avatar { border-radius: 50%!important; position: relative; overflow: hidden;background-position: center;background-repeat: no-repeat;}
+.avatar--xxs { width: 20px; height: 20px; line-height: 20px; background-size: 20px;}
 .avatar--xs { width: 30px; height: 30px; line-height: 30px; background-size: 30px;}
 .avatar--s { width: 40px; height: 40px; line-height: 40px; background-size: 40px;}
 .avatar--m { width: 54px; height: 54px; line-height: 54px; background-size: 54px;}
 .avatar--l { width: 70px; height: 70px; line-height: 70px; background-size: 70px;}
 .avatar--xl { width: 100px; height: 100px; line-height: 100px; background-size: 100px; }
-.avatar--border-white { border: 5px solid white;}
+.avatar--border-white--1 { border: 1px solid white;}
+.avatar--border-white--2 { border: 2px solid white;}
+.avatar--border-white--3 { border: 3px solid white;}
+.avatar--border-white--4 { border: 4px solid white;}
+.avatar--border-white--5 { border: 5px solid white;}
