ignore and delete public js

--- a/resources/assets/sass/layouts/_dashboard-students.scss
+++ b/resources/assets/sass/layouts/_dashboard-students.scss
@@ -44,6 +44,7 @@
     display: inline-flex;
     align-items: center;
     padding-top: 13px;
+    filter: grayscale(100);
     .searchicon {
         width: 20px;
         height: 20px;
@@ -57,6 +58,7 @@
 .avatarWrap {
     @extend .searchWrap;
     cursor: pointer;
+    filter: none;
     padding: 10px!important;
 }
 
@@ -250,3 +252,29 @@ ul.navigationWrap-items li a {
 }
 
 // popup profile
+
+.menuProfile {
+    padding: 10px 15px;
+    .menuProfile__header {
+        h5 {
+            font-weight: 600;
+            color: $black-young;
+        }
+        p {
+            font-size: 12px;
+            color: $grey;
+            font-weight: 400;
+            @extend .marginTop-xxs;
+            @extend .marginBottom-xxs;
+        }
+        border-bottom: 1px solid #eee;
+    }
+    .menuProfile__content {
+        ul li {
+            a {
+                text-decoration: none;
+                
+            }
+        }
+    }
+}
