--- a/resources/assets/sass/layouts/_dashboard-students.scss
+++ b/resources/assets/sass/layouts/_dashboard-students.scss
@@ -270,10 +270,19 @@ ul.navigationWrap-items li a {
         border-bottom: 1px solid #eee;
     }
     .menuProfile__content {
+        @extend .paddingTop-xxs;
         ul li {
+            padding: 5px 10px;
+            &:hover {
+                background: $grey-young;
+            }
+            &:hover > a {
+                color: $black;
+            }
+            @extend .borderRadius-s;
             a {
                 text-decoration: none;
-                
+                font-weight: 400;
             }
         }
     }
