--- a/resources/assets/sass/layouts/_dashboard-students.scss
+++ b/resources/assets/sass/layouts/_dashboard-students.scss
@@ -138,7 +138,7 @@ ul.navigationWrap-items li a {
 }
 
 .container {
-    background: #F0F0F0;
+    // background: #F0F0F0;
     min-height: 100vh;
 }
 
