Update : profile student prototype

--- a/resources/assets/sass/base/_colors.scss
+++ b/resources/assets/sass/base/_colors.scss
@@ -9,7 +9,7 @@ $black-darken: #000202;
 $black-young: #434445;
 $yellow: #FAC02E;
 $yellow-darken: #FD8A3E;
-$green: #00D19A;
+$green: #25c782;
 $green-young: #25E788;
 $purple: #CE4CC9;
 $purple-young: #FD53BF;
