--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -21,7 +21,9 @@
     -webkit-font-smoothing: subpixel-antialiased !important;
     text-shadow: rgba(0,0,0,.01) 0 0 1px;
   }
-  
+  h1, h2, h3, h4, h5, h6 {
+    color: #2e2f30;
+  }
   p , a {font-size: 14px;}
   a {
     text-decoration: underline;
