--- a/resources/assets/sass/layouts/_profile.scss
+++ b/resources/assets/sass/layouts/_profile.scss
@@ -1,23 +1,85 @@
 .profile {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 220px;
-    color: #424242;
-    font-size: 14px;
+    position: relative;
+    flex-grow: 1;
+    display: flex;
 }.profile__sidebar {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 220px;
+    @extend .universe;
+    width: 270px;
     border-right: 1px solid #eee;
     padding: 20px 10px;
+}.profileSidebar__header {
+    @extend .paddingTop-s;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    .profileSidebarHeader__title {
+        text-align: center;
+        @extend .marginTop-s;
+        h3 {
+            font-weight: 500;
+            color: $black;
+            font-size: 16px;
+        }
+        p {
+            @extend .marginTop-xxs;
+            color: $grey;
+            font-size: 12px;
+        }
+    }
 }.profile__core {
-    width: 50%;
-    height: calc(100vh - 1285px);
-    background: $red;
+    left: 270px!important;
+    overflow-y: auto;
+    @extend .universe;
+}.profileCore__header {
+    border-bottom: 1px solid #eee;
+    padding: 10px 15px;
+    h4 {
+        font-weight: 500;
+        color: $grey;
+    }
+}.profileCore__content {
+    padding: 40px;
+    @extend .marginMagic;
+    color: #575858;
+    font-weight: 400;
+    overflow-y: auto;
+}.preference {
+    h2 {
+        padding-bottom: 0.75em;
+        margin-bottom: 0.75em;
+        border-bottom: 1px solid #e8e9ea;
+        color: $green;
+        font-weight: 400;
+    }.preference__general {
+        @extend .paddingBottom-xl;
+    }
+    .preference__privacy {
+        h2 {
+            color: $red!important;
+        }
+    }
+}.preference__form {
+    border: none;
+    @extend .marginTop-xs;
+    @extend .marginBottom-xs;
+    label {
+        display:inline-block;
+        position:relative;
+        width: 120px;
+        font-weight: 500;
+    }
+    input {
+        padding: 7px 8px;
+        border: 1px solid rgba(0,0,0,0);
+        @extend .borderRadius-s;
+        width: 300px;
+        font-size: 14px;
+        &:focus {
+            outline: none;
+            color: #575858;
+            padding: 7px 8px;
+            // border: 1px solid rgba(0,0,0,.15);
+            border: 1px solid $blue;
+        }
+    }
 }
