Update : team page student && new color Green darken

--- a/resources/assets/sass/base/_colors.scss
+++ b/resources/assets/sass/base/_colors.scss
@@ -11,6 +11,7 @@ $black-young: #434445;
 $yellow: #FAC02E;
 $yellow-darken: #FD8A3E;
 $green: #25c782;
+$green-darken: #21a76d;
 $green-young: #25E788;
 $purple: #CE4CC9;
 $purple-young: #FD53BF;
