Update : changing route links
- change /home route => /h
- add board page url = /b/:unique_id/ ( /h/b/jvnx/ )
- add board childs route url = [ /storage , /setting ]

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,5 +23,6 @@
 @import "./layouts/dashboard-students";
 @import "./layouts/getstart";
 @import "./layouts/profile";
+@import "./layouts/project-students";
 // Pages
 // Themes
