--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -17,6 +17,7 @@
   }
   html {
     -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: subpixel-antialiased !important;
     text-shadow: rgba(0,0,0,.01) 0 0 1px;
