Update : board student overview prototype # 1
- improve reuse css codes
- add 3 new colors = [ pink , gradientBlue , gradientGreen(beta) ]
- Fix blocks css 
- add bold style on nav-active

--- a/resources/assets/sass/base/_prefix.scss
+++ b/resources/assets/sass/base/_prefix.scss
@@ -6,6 +6,13 @@
     display: flex;
     justify-content: center;
 }
+
+.bg {
+    background-origin: border-box;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 // end of instant prefix //
 
 //border-radius Scheme //
