--- a/resources/assets/sass/layouts/_dashboard-students.scss
+++ b/resources/assets/sass/layouts/_dashboard-students.scss
@@ -124,8 +124,7 @@ ul.navigationWrap-items li a {
     .popupContent__images__dp {
         position: absolute;
         top: 0;
-        display: flex;
-        justify-content: center;
+        @extend .flexCenter;
         align-items: center;
         width: inherit;
         height: 200px;
@@ -190,10 +189,7 @@ ul.navigationWrap-items li a {
     @extend .paddingAppear-n;
 }.project__item__header {
     @extend .overflow-disable;
-    background-origin: border-box;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    @extend .bg;
     width: 300px;
     height: 150px;
 }.project__item__core__title {
