--- a/resources/assets/sass/layouts/_project-students.scss
+++ b/resources/assets/sass/layouts/_project-students.scss
@@ -1,8 +1,5 @@
 #board {
-    width: 100%;
-    #boardApp {
-        padding: 10px;
-    }
+    flex-grow: 1;
 }
 .navbar--extend {
     box-shadow: 0 2px 2px -1px rgba(0,0,0,0.1);
@@ -13,5 +10,29 @@ ul.navigationWrap-items--extended {
     @extend .navigationWrap-items;
     li a {
         font-size: 12px!important;
+    }
+}
+
+// overview 
+.overview__header {
+    padding-left: 50px;
+    flex-grow: 1;
+    // background-color: $pink;
+    @extend .gradientBlue;
+    @extend .bg;
+    align-items: center;
+    .overviewHeader__info {
+        @extend .paddingTop-xs;
+        @extend .paddingBottom-s;
+        h3 , p {
+            color: white;
+        }
+        h3 {
+            font-weight: 400;
+            line-height: 2em;
+        }
+        p {
+            font-weight: lighter;
+        }
     }
 }
