--- a/resources/assets/sass/base/_colors.scss
+++ b/resources/assets/sass/base/_colors.scss
@@ -15,7 +15,7 @@ $green-darken: #21a76d;
 $green-young: #25E788;
 $purple: #CE4CC9;
 $purple-young: #FD53BF;
-$whiteblue: #F7F9FA;
+$bg: #F5F5F5;
 $pink: #FD53BF;
 
 .textBlack {
