--- a/resources/assets/sass/layouts/_project-students.scss
+++ b/resources/assets/sass/layouts/_project-students.scss
@@ -133,4 +133,11 @@ ul.navigationWrap-items--extended {
     text-decoration: none;
     word-wrap: break-word;
     color: #4d4d4d;
+}.ghost {
+    opacity: .5;
+    background: #C8EBFB;
+}.fix {
+    position: fixed!important;
+}.drag {
+    transform: scale(1.5);
 }
